# communicator

android/: settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/androidTest/java/org/unknownplace/communicator/: ExampleInstrumentedTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/org/unknownplace/communicator/: CommunicatorGraph.kt  MainActivity.kt  Shared.kt  TokenStore.kt
android/app/src/main/java/org/unknownplace/communicator/ui/screens/: LoginScreen.kt  RootScreen.kt  RootScreenViewModel.kt
android/app/src/main/java/org/unknownplace/communicator/ui/theme/: Color.kt  Theme.kt  Type.kt
android/app/src/main/res/values/: themes.xml
android/app/src/test/java/org/unknownplace/communicator/: ExampleUnitTest.kt
android/gradle/wrapper/: gradle-wrapper.properties
core/: .gitignore  Cargo.toml  build-android-lib.sh
core/migrations/: 20241031195325_CreateTable.down.sql  20241031195325_CreateTable.up.sql
core/src/: config.rs  db.rs  error.rs  lib.rs  logger.rs  token_store.rs
